# apphome

./: README.md
code/fmt/: myformat.h  myformat.h.alt  myformat.h.lastoneoftheday  myisitstillworking.cpp  mymain.cpp
code/gnomehw/: CMakeLists.txt  README.md  build.sh  gnomehw.cbp  main.cpp  make.sh  myGnomeApplication.cpp  myGnomeApplication.h  myGnomeException.h  myGnomeMenuApplication.cpp  myGnomeMenuApplication.h  myGnomeWindow.cpp  myGnomeWindow.h  myGnomeWindowTree.cpp  myGnomeWindowTree.h  myUtils.cpp  myUtils.h
code/lidebug/: Makefile  Makefile.opts  lidebug.c  lidebug.h
docs/: LINUX.md
scripts/: faq_configure_gateway.sh  makeg
